force-app/main/default/objects/YotpoAPI__c/YotpoAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Yotpo API Endpoints</description>
    <label>YotpoAPI</label>
</CustomObject>