force-app/main/default/objects/YotpoAPI__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>