force-app/main/default/objects/YotpoAPI__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country code</description>
    <label>Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>